--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/styles.css" media="screen">
   </head>
     <body>
+    <div class='wrapper'>
       <h1>Doughnut House</h1>
+  
 
 
       <footer class="site-footer">
@@ -16,6 +18,6 @@
      </footer>
     </section>
 
-  
+  </div>
   </body>
 </html>
