--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/styles.css" media="screen">
   </head>
     <body>
-    <div class='wrapper'>
-      <h1>Doughnut House</h1>
+      <nav>
+        <img class="logo" src="https://cloud.githubusercontent.com/assets/9605582/10075965/ab9354de-62d0-11e5-89fd-88b6a51a6209.png">
+        <h1>Doughnut House</h1>
+      </nav>
   
 
 
@@ -17,7 +19,5 @@
         <span class="site-footer-owner"><a href="https://github.com/AGilchrist0/doughnuthouse">Doughnut House</a> is maintained by <a href="https://github.com/AGilchrist0">AGilchrist0</a>.</span>
      </footer>
     </section>
-
-  </div>
   </body>
 </html>
