--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/styles.css" media="screen">
   </head>
-    <body>
+  <body>
+    <section class="wrapper">
       <nav>
         <img class="logo" src="https://cloud.githubusercontent.com/assets/9605582/10075965/ab9354de-62d0-11e5-89fd-88b6a51a6209.png">
         <h1>Doughnut House</h1>
